# ChangeLog for dev-python/pyside
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyside/ChangeLog,v 1.40 2012/07/27 18:10:32 kensington Exp $

  27 Jul 2012; Michael Palimaka <kensington@gentoo.org> pyside-1.1.1.ebuild:
  Add missing dependency, thanks to steev.

  12 Jun 2012; Davide Pesavento <pesa@gentoo.org> -pyside-1.1.0-r1.ebuild:
  Remove old.

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pyside-1.1.1.ebuild:
  x86 stable wrt bug #418421

  03 Jun 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Remove myself as maintainer. Qt team will take care of that

  03 Jun 2012; Davide Pesavento <pesa@gentoo.org> pyside-1.1.1.ebuild:
  Fix QtGui_pyside_reload_test, bug 415553 comment 5.

  02 Jun 2012; Markos Chandras <hwoarang@gentoo.org> pyside-1.1.1.ebuild:
  Stable on amd64 wrt bug #418421

  30 May 2012; Justin Lecher <jlec@gentoo.org> pyside-1.1.1.ebuild,
  +files/rpath.cmake:
  Add fix for prefix, missing rpath for qt4 installation

  29 May 2012; Justin Lecher <jlec@gentoo.org> pyside-1.1.1.ebuild:
  Added ~-linux keywords, tested by me

  13 May 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Fix kde USE flag description (media-libs/phonon vs. media-sound/phonon).

*pyside-1.1.1 (28 Apr 2012)

  28 Apr 2012; Davide Pesavento <pesa@gentoo.org> +pyside-1.1.1.ebuild:
  Version bump. Switch to out-of-source build.

  22 Apr 2012; Markus Meier <maekke@gentoo.org> pyside-1.1.0-r1.ebuild:
  x86 stable, bug #401789

  14 Apr 2012; Agostino Sarubbo <ago@gentoo.org> pyside-1.1.0-r1.ebuild:
  Stable for amd64, wrt bug #401789

  10 Apr 2012; Davide Pesavento <pesa@gentoo.org> -pyside-1.1.0.ebuild,
  metadata.xml:
  Remove old.

  07 Mar 2012; Davide Pesavento <pesa@gentoo.org>
  -files/pyside-find-kde-phonon.patch, -pyside-1.0.6.ebuild,
  -pyside-1.0.9.ebuild:
  Remove obsolete versions that are never going to be stabilized.
