@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyside/pyside-1.1.1.ebuild,v 1.7 2012/07/27 18:10:32 kensington Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyside/pyside-1.1.1.ebuild,v 1.8 2012/07/27 21:32:49 steev Exp $
 
 EAPI=4
 
@@ -20,7 +20,7 @@ SRC_URI="http://www.pyside.org/files/${MY_P}.tar.bz2"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="amd64 x86 ~amd64-linux ~x86-linux"
+KEYWORDS="amd64 ~arm x86 ~amd64-linux ~x86-linux"
 IUSE="X declarative help multimedia kde opengl phonon script scripttools sql svg test webkit xmlpatterns"
 
 REQUIRED_USE="
