@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/shiboken/shiboken-1.1.1.ebuild,v 1.5 2012/06/08 11:36:47 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/shiboken/shiboken-1.1.1.ebuild,v 1.6 2012/07/27 21:31:46 steev Exp $
 
 EAPI=4
 
@@ -16,7 +16,7 @@ SRC_URI="http://www.pyside.org/files/${P}.tar.bz2"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="amd64 x86 ~amd64-linux ~x86-linux"
+KEYWORDS="amd64 ~arm x86 ~amd64-linux ~x86-linux"
 IUSE="test"
 
 RDEPEND="
