@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/shiboken
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.30 2012/06/12 20:21:35 pesa Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.31 2012/07/27 21:31:46 steev Exp $
+
+  27 Jul 2012; Steev Klimaszewski <steev@gentoo.org> shiboken-1.1.1.ebuild:
+  Add ~arm keyword. Tested on i.MX6 (armv7)
 
   12 Jun 2012; Davide Pesavento <pesa@gentoo.org> -shiboken-1.1.0-r2.ebuild:
   Remove old.
